fix: fix drop-zone icon being lost if list is too long

--- a/client/components/dropzone.module.scss
+++ b/client/components/dropzone.module.scss
@@ -9,13 +9,20 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 100%;
   background: rgb(0 0 0 / 0.5);
   pointer-events: none;
+  font-size: 5vw;
+}
+
+.dropActiveContent {
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 5vw;
+  height: min(100vh, 100%);
 }
